--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "epxress": "0.0.1-security",
     "express": "^4.17.1",
+    "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
     "morgan": "^1.10.0"
